package paycore.paycore.domain;

public enum EventType {
    SUCCESS,
    FAILURE
}

