package paycore.paycore.domain;

public enum SettlementStatus {
    PENDING,
    COMPLETED,
    FAILED
}

