@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho


' Domain Enums
enum SettlementStatus {
    PENDING
    COMPLETED
    FAILED
}

enum EventType {
    SUCCESS
    FAILURE
}

enum OutboxStatus {
    PENDING
    SENT
    FAILED
}

' Common Interface
interface UseCase<I, O> {
    +execute(I input): O
}



' Entities
class SettlementEntity {
    -UUID id
    -UUID sagaId
    -UUID paymentId
    -BigDecimal amount
    -BigDecimal fee
    -String apiKey
    -BigDecimal merchantPayoutAmount
    -BigDecimal platformFeeAmount
    -SettlementStatus status
    -LocalDateTime settledAt
    +markCompleted(BigDecimal, BigDecimal)
    +markFailed()
}

class SettlementOutboxEntity {
    -UUID settlementId
    -UUID sagaId
    -EventType eventType
    -OutboxStatus status
    -String payload
    -LocalDateTime createdAt
    -LocalDateTime sentAt
    +markSent()
    +markFailed()
}

' Repositories
interface SettlementRepository {
    +save(SettlementEntity): SettlementEntity
    +findByPaymentId(UUID): Optional<SettlementEntity>
    +findAllByStatus(SettlementStatus): List<SettlementEntity>
}

interface SettlementOutboxRepository {
    +save(SettlementOutboxEntity): SettlementOutboxEntity
}

' Use Cases
interface ProcessSettlementUseCase {
    +execute(SettlementRequestDto): SettlementEntity
}

interface FindSettlementUseCase {
    +execute(UUID): SettlementEntity
}

' Services
class SettlementService {
    -SettlementRepository settlementRepository
    -SettlementOutboxRepository settlementOutboxRepository
    +execute(SettlementRequestDto): SettlementEntity
}

class SettlementPersistenceService {
    -SettlementRepository settlementRepository
    +execute(UUID): SettlementEntity
}

class SettlementBatchTasklet {
    -SettlementRepository settlementRepository
    -SettlementOutboxRepository settlementOutboxRepository
    +execute(StepContribution, ChunkContext): RepeatStatus
}

' Scheduler
class SettlementBatchScheduler {
    -JobLauncher jobLauncher
    -Job settlementJob
    +runSettlementJob(): void
}


' Relationships - Inheritance
UseCase <|.. ProcessSettlementUseCase
UseCase <|.. FindSettlementUseCase

' Relationships - Implementation
ProcessSettlementUseCase <|.. SettlementService
FindSettlementUseCase <|.. SettlementPersistenceService

' Relationships - Service Dependencies
SettlementService --> SettlementRepository
SettlementService --> SettlementOutboxRepository
SettlementService --> SettlementEntity
SettlementService --> SettlementOutboxEntity

SettlementPersistenceService --> SettlementRepository

SettlementBatchTasklet --> SettlementRepository
SettlementBatchTasklet --> SettlementOutboxRepository
SettlementBatchTasklet --> SettlementEntity
SettlementBatchTasklet --> SettlementOutboxEntity

' Relationships - Batch Dependencies
' Note: SettlementBatchScheduler periodically executes SettlementBatchTasklet via Spring Batch Job
SettlementBatchScheduler --> SettlementBatchTasklet

' Relationships - Entity to Enum
SettlementEntity --> SettlementStatus
SettlementOutboxEntity --> EventType
SettlementOutboxEntity --> OutboxStatus

' Relationships - Repository to JPA
SettlementRepository ..|> JpaRepository
SettlementOutboxRepository ..|> JpaRepository

@enduml